add red colore for resulved only if it invalid or wantfix
because all duplicates needs to be verified like "fixed" bugs. On this way, we can to catch reprodusing of diplicate of bug when originat bug is fixed

--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -184,7 +184,7 @@
             </div>
             <div class="bug-status"
             matTooltip="{{bug.status}} {{bug.resolution}}"
-            [ngStyle]="{color: (bug.resolution == '' || bug.resolution == 'FIXED')?'black':'red', margin: 'auto'}">
+            [ngStyle]="{color: bug.buguetteStatusColor, margin: 'auto'}">
               <span>&nbsp;{{bug.buguetteStatus}}</span>
             </div>
           </mat-card>
