fix: add resolution to detail

--- a/src/app/bug-details/bug-details.component.html
+++ b/src/app/bug-details/bug-details.component.html
@@ -9,7 +9,7 @@
       </span>
       &nbsp;{{bug.priority}}
     </mat-card-subtitle>
-    <mat-card-subtitle>{{bug.buguetteStatus}}</mat-card-subtitle>
+    <mat-card-subtitle>{{bug.status}} {{bug.resolution}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content class="addition-data">
     <mat-divider></mat-divider>
