--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -126,14 +126,14 @@
         </div>
         <form [ngClass]="{'creator-assigned-form': !smallForm}">
           <mat-form-field class="assigned-field">
-            <input matInput placeholder="Assigned To" aria-label="Assigned To" [matAutocomplete]="auto" [errorStateMatcher]="matcher"
+            <input matInput placeholder="Assigned To" aria-label="Assigned To" [matAutocomplete]="assignedauto" [errorStateMatcher]="matcher"
               [formControl]="assignedToControl">
             <mat-error>Field is ignored. Please, select user from list</mat-error>
             <button mat-button *ngIf="assignedToControl.value" matSuffix mat-icon-button aria-label="Clear"
               (click)="assignedToControl.reset()">
               <mat-icon>close</mat-icon>
             </button>
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayUser">
+            <mat-autocomplete #assignedauto="matAutocomplete" [displayWith]="displayUser">
               <mat-option *ngFor="let user of (filteredAssignedTo | async)" [value]="user">
                 <img class="creator-image" aria-hidden [src]="user.avatar || '/assets/avatars/default.jpg'" height="25"
                   [hidden]="smallForm">
