--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -160,7 +160,7 @@
         <a *cdkVirtualFor="let bug of bugs" onclick="return false" routerLink="/bug/{{bug.id}}" target="_blank"
           class="bug-list-link-wrapper">
           <mat-card (click)="get_details(bug)" [ngClass]="{'mat-elevation-z10': (bugDetail$ | async)?.id == bug.id}"
-            [ngStyle]="{'border-left': '0.4em solid ' + products[bug.product].color}" routerLinkActive="active"
+            [ngStyle]="{'border-left': '0.4em solid ' + products[bug.product]?.color}" routerLinkActive="active"
             class="result-item">
             <mat-icon class="bug-severity" matTooltip={{bug.severity}} aria-hidden="false"
               [ngStyle]="{'color': severities[bug.severity]?.color, 'margin': 'auto'}">
