Add about window with version info

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -24,6 +24,7 @@
 
 <mat-menu #appMenu="matMenu">
   <button (click)="settingsOpen()" mat-menu-item>Settings</button>
+  <button (click)="aboutOpen()" mat-menu-item>About</button>
   <button (click)="logout()" mat-menu-item>Logout</button>
 </mat-menu>
 
